samples/_failures_safe/1761791802_44c1ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ba18436.c: In function ‘main’:
./samples/SAFE/__tmp_6ba18436.c:144:25: error: missing terminating " character
  144 |         fprintf(stderr, "
      |                         ^
./samples/SAFE/__tmp_6ba18436.c:144:9: error: expected expression at end of input
  144 |         fprintf(stderr, "
      |         ^~~~~~~
./samples/SAFE/__tmp_6ba18436.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6ba18436.c:144:9: error: expected declaration or statement at end of input
